--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>VIVANETE</title>
-  <link rel='shortcut icon' href='#' type='image/x-icon'/>
+  <title>VIVANETE - Internet fibra óptica - Telefone fixo</title>
+  <link rel='shortcut icon' href='img/favicon.png' type='image/x-icon'/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="stylesheet" href="styele.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="body-init">
+
   <div class="dark-mode" style="font-size: 12px;">
     <img src="img/icons8-símbolo-da-lua-50.png" class="dark">
   </div>
+
   <header>
     <nav class="navbar">
       <a class="navbar-brand" href="index.html">
@@ -39,7 +41,9 @@
       </div>
     </nav>
   </header>
+
   <hr>
+
   <ul class="content">
     <div class="content-social">
       <li>
@@ -75,6 +79,7 @@
       </div>
     </li>
   </ul>
+
   <div class="owl-carousel owl-theme">
     <div class="item">
       <img src="img/carousel img3.png" alt="">
@@ -83,6 +88,24 @@
       <img src="img/carousel img4.png" alt="">
     </div>
   </div>
+
+  <div class="card-main">
+    <div class="cards">
+      <li>
+        <h4><i class="fa-solid fa-globe"></i>Internet Fibra Óptica</h4>
+      </li>
+      <li>
+        <h4><i class="fas fa-phone-volume"></i>Telefone Fixo Ilimitado!</h4>
+      </li>
+      <li>
+        <h4><i class="fas fa-tractor"></i>Internet Rural Via Rádio</h4>
+      </li>
+    </div>
+  </div>
+
+  <footter class="footer">
+
+  </footter>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
