--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="body-init">
 
   <div class="dark-mode" style="font-size: 12px;">
-    <img src="img/icons8-símbolo-da-lua-50.png" class="dark">
+    <i class="fa-regular fa-moon fa-lg dark"></i>
   </div>
 
   <header>
