--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>VIVANETE - Internet fibra óptica - Telefone fixo</title>
-  <link rel='shortcut icon' href='img/favicon.png' type='image/x-icon'/>
+  <link rel='shortcut icon' href='img/favicon2-removebg-preview-removebg-preview.png' type='image/x-icon'/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="stylesheet" href="styele.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -44,64 +44,79 @@
 
   <hr>
 
-  <ul class="content">
-    <div class="content-social">
-      <li>
-        <div id="social" style="font-weight: bold;">
-          <a data-id="24817" href="https://www.facebook.com/Vivanete/" class="facebook dt_social" target="_blank" title="Facebook">
-            <i class="fab fa-facebook-f"></i> 
-            <b>Facebook</b>
-          </a>
+  <main>
+    <section>
+      <ul class="content">
+        <div class="content-social">
+          <li>
+            <div id="social" style="font-weight: bold;">
+              <a data-id="24817" href="https://www.facebook.com/Vivanete/" class="facebook dt_social" target="_blank" title="Facebook">
+                <i class="fab fa-facebook-f"></i> 
+                <b>Facebook</b>
+              </a>
+            </div>
+          </li>
+          <li>
+            <div id="social" style="font-weight: bold;">
+              <a data-id="24817" href="https://instagram.com/vivaneteinternet?utm_medium=copy_link" class="instagram dt_social" target="_blank" title="Instagram">
+                <i class="fab fa-instagram"></i> 
+                <b>Instagram</b>
+              </a>
+            </div>
+          </li>
+          <li>
+            <div id="social" style="font-weight: bold;">
+              <a data-id="24817" href="https://wa.me/554930602020" class="whatsapp dt_social" target="_blank" title="WhatsApp">
+                <i class="fab fa-whatsapp"></i> 
+                <b>WhatsApp</b>
+              </a>
+            </div>
+          </li>
         </div>
-      </li>
-      <li>
-        <div id="social" style="font-weight: bold;">
-          <a data-id="24817" href="https://instagram.com/vivaneteinternet?utm_medium=copy_link" class="instagram dt_social" target="_blank" title="Instagram">
-            <i class="fab fa-instagram"></i> 
-            <b>Instagram</b>
-          </a>
+        <li>
+          <div id="social" style="font-weight: bold;">
+            <a data-id="24817" href="http://189.113.95.3/central/login.php" class="segunda-via dt_social" target="_blank" title="Segunda via">
+              <b>SEGUNDA VIA</b>
+            </a>
+          </div>
+        </li>
+      </ul>
+    </section>
+
+    <section>
+      <div class="owl-carousel owl-theme">
+        <div class="item">
+          <img src="img/carousel img3.png" alt="">
         </div>
-      </li>
-      <li>
-        <div id="social" style="font-weight: bold;">
-          <a data-id="24817" href="https://wa.me/554930602020" class="whatsapp dt_social" target="_blank" title="WhatsApp">
-            <i class="fab fa-whatsapp"></i> 
-            <b>WhatsApp</b>
-          </a>
+        <div class="item">
+          <img src="img/carousel img4.png" alt="">
         </div>
-      </li>
-    </div>
-    <li>
-      <div id="social" style="font-weight: bold;">
-        <a data-id="24817" href="http://189.113.95.3/central/login.php" class="segunda-via dt_social" target="_blank" title="Segunda via">
-          <b>SEGUNDA VIA</b>
-        </a>
       </div>
-    </li>
-  </ul>
+    </section>
 
-  <div class="owl-carousel owl-theme">
-    <div class="item">
-      <img src="img/carousel img3.png" alt="">
-    </div>
-    <div class="item">
-      <img src="img/carousel img4.png" alt="">
-    </div>
-  </div>
+    <section>
+      <div class="card-main">
+        <div class="cards">
+          <li>
+            <h4><i class="fa-solid fa-globe"></i>Internet Fibra Óptica</h4>
+          </li>
+          <li>
+            <h4><i class="fas fa-phone-volume"></i>Telefone Fixo Ilimitado!</h4>
+          </li>
+          <li>
+            <h4><i class="fas fa-tractor"></i>Internet Rural Via Rádio</h4>
+          </li>
+        </div>
+      </div>
+    </section>
 
-  <div class="card-main">
-    <div class="cards">
-      <li>
-        <h4><i class="fa-solid fa-globe"></i>Internet Fibra Óptica</h4>
-      </li>
-      <li>
-        <h4><i class="fas fa-phone-volume"></i>Telefone Fixo Ilimitado!</h4>
-      </li>
-      <li>
-        <h4><i class="fas fa-tractor"></i>Internet Rural Via Rádio</h4>
-      </li>
-    </div>
-  </div>
+    <section class="plano-vivanete">
+      <div class="plano-vivanete_content">
+        <h1>Assine a melhor internet residencial banda larga com fibra ótica e Wifi do Brasil</h1>
+        <h2>Plano de internet VIVANETE feito para você</h2>
+      </div>
+    </section>
+  </main>
 
   <footter class="footer">
 
