--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <a class="nav-link" aria-current="page" href="index.html">Início</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Serviços</a>
+            <a class="nav-link" href="#services">Serviços</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Sobre</a>
+            <a class="nav-link" href="#about">Sobre</a>
           </li>
         </ul>
       </div>
@@ -45,7 +45,7 @@
   <hr>
 
   <main>
-    <section>
+    <section class="content-links">
       <ul class="content">
         <div class="content-social">
           <li>
@@ -83,7 +83,7 @@
       </ul>
     </section>
 
-    <section>
+    <section class="main-carousel">
       <div class="owl-carousel owl-theme">
         <div class="item">
           <img src="img/carousel img3.png" alt="">
@@ -94,7 +94,7 @@
       </div>
     </section>
 
-    <section>
+    <section class="card-slides">
       <div class="card-main">
         <div class="cards">
           <li>
@@ -114,6 +114,23 @@
       <div class="plano-vivanete_content">
         <h1>Assine a melhor internet residencial banda larga com fibra ótica e Wifi do Brasil</h1>
         <h2>Plano de internet VIVANETE feito para você</h2>
+      </div>
+    </section>
+
+    <section class="ver-mais">
+      <button class="ver-mais-content">
+        <div>
+          <a href="#services">
+            <i class="fa-solid fa-arrow-down fa-bounce"></i>
+          </a>
+        </div>
+      </button>
+    </section>
+
+    <section class="serviços" id="services">
+      <div class="serviços-title">
+        <h2>Serviços</h2>
+        <h3>Assine a banda larga VIVANETE Telecom com fibra, mais estabilidade e ultravelocidade, aproveite todas as vantagens dos nossos serviços.</h3>
       </div>
     </section>
   </main>
