--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@
     </section>
 
     <section class="ver-mais">
-      <button class="ver-mais-content">
-        <div>
-          <a href="#services">
+      <a href="#services" style="color: #fff; display: flex; justify-content: center;">
+        <button class="ver-mais-content">
+          <div>
             <i class="fa-solid fa-arrow-down fa-bounce"></i>
-          </a>
-        </div>
-      </button>
+          </div>
+        </button>
+      </a>
     </section>
 
     <section class="serviços" id="services">
@@ -132,7 +132,43 @@
         <h2>Serviços</h2>
         <h3>Assine a banda larga VIVANETE Telecom com fibra, mais estabilidade e ultravelocidade, aproveite todas as vantagens dos nossos serviços.</h3>
       </div>
+      <div class="service_content_card">
+        <div class="service_card">
+          <img src="https://static.wixstatic.com/media/661a42_79134ccb3f7b4aadb9b1f6d73ff2ad12~mv2.jpg/v1/fill/w_554,h_300,fp_0.50_0.50,q_80,usm_0.66_1.00_0.01,enc_auto/661a42_79134ccb3f7b4aadb9b1f6d73ff2ad12~mv2.jpg" alt="">
+          <h2>Internet Fibra Óptica</h2>
+          <p>Velocidade e qualidade! Internet com alta qualidade, Entregamos qualidade, segurança e confiança em nossos serviços.</p>
+          <button class="my-button">
+            <a href="www.google.com" target="_blank">
+              <i class="fab fa-whatsapp"></i>
+              <b>Consultar</b>
+            </a>
+          </button>
+        </div>
+        <div class="service_card">
+          <img src="https://static.wixstatic.com/media/661a42_10235c75c6cd47429feb282a1bea9bb5~mv2.jpg/v1/fill/w_554,h_300,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/661a42_10235c75c6cd47429feb282a1bea9bb5~mv2.jpg" alt="">
+          <h2>Telefone Fixo Ilimitado!</h2>
+          <p>Fale Ilimitado! Faça sua portabilidade! e Venha fazer parte da Melhor conexão da Região em Telefone Fixo, Trabalhamos com Telefone Fixo com planos a partir de R$30,00. </p>
+          <button class="my-button">
+            <a href="www.google.com" target="_blank">
+              <i class="fab fa-whatsapp"></i>
+              <b>Consultar</b>
+            </a>
+          </button>
+        </div>
+        <div class="service_card">
+          <img src="https://static.wixstatic.com/media/661a42_46bcef01bc01475ab5a3435d2f825e4e~mv2.png/v1/fill/w_554,h_300,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/661a42_46bcef01bc01475ab5a3435d2f825e4e~mv2.png" alt="">
+          <h2>Internet Rural Via Rádio</h2>
+          <p>Você sempre conectado! Contamos com Internet via rádio em nossos interiores, em lugares de difícil acesso levamos Internet com qualidade e rapidez.</p>
+          <button class="my-button">
+            <a href="www.google.com" target="_blank">
+              <i class="fab fa-whatsapp"></i>
+              <b>Consultar</b>
+            </a>
+          </button>
+        </div>
+      </div>
     </section>
+    
   </main>
 
   <footter class="footer">
