--- a/index.html
+++ b/index.html
@@ -155,13 +155,12 @@
             </a>
           </button>
         </div>
-       
       </div>
     </section>
 
     <div class="logoWhats">
       <a href="">
-        <img src="img/whatsss.png" alt="">
+        <dotlottie-player src="https://lottie.host/97d4764b-e3d6-4d98-b962-094e92936313/xElMySWItp.json" background="transparent" speed="1" style="width: 100px; height: auto;" loop autoplay></dotlottie-player>
       </a>
     </div>
     
@@ -171,6 +170,7 @@
 
   </footter>
 
+  <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script> 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script>
