--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     </section>
 
     <div class="logoWhats">
-      <a href="">
+      <a href="https://api.whatsapp.com/send?phone=554991182828" target="_blank">
         <dotlottie-player src="https://lottie.host/97d4764b-e3d6-4d98-b962-094e92936313/xElMySWItp.json" background="transparent" speed="1" style="width: 100px; height: auto;" loop autoplay></dotlottie-player>
       </a>
     </div>
