--- a/index.html
+++ b/index.html
@@ -155,6 +155,18 @@
             </a>
           </button>
         </div>
+        <div class="service_card">
+
+          <img src="https://static.wixstatic.com/media/661a42_46bcef01bc01475ab5a3435d2f825e4e~mv2.png/v1/fill/w_554,h_300,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/661a42_46bcef01bc01475ab5a3435d2f825e4e~mv2.png" alt="">
+          <h2>Internet Rural Via Rádio</h2>
+          <p>Você sempre conectado! Contamos com Internet via rádio em nossos interiores, em lugares de difícil acesso levamos Internet com qualidade e rapidez.</p>
+          <button class="my-button">
+            <a href="www.google.com" target="_blank">
+              <i class="fab fa-whatsapp"></i>
+              <b>Consultar</b>
+            </a>
+          </button>
+        </div>
       </div>
     </section>
 
