--- a/index.html
+++ b/index.html
@@ -171,16 +171,20 @@
     </section>
 
     <div class="logoWhats">
-      <a href="https://api.whatsapp.com/send?phone=554991182828" target="_blank">
+      <a href="https://api.whatsapp.com/send?phone=554930602020" target="_blank">
         <dotlottie-player src="https://lottie.host/97d4764b-e3d6-4d98-b962-094e92936313/xElMySWItp.json" background="transparent" speed="1" style="width: 100px; height: auto;" loop autoplay></dotlottie-player>
       </a>
     </div>
-    
   </main>
 
-  <footter class="footer">
-
-  </footter>
+  <footer>
+    <div class="footerPrimary">
+      <span>Copyright © 2023 All Rights Reserved</span>
+      <span class="link">
+          <a href="#">Início</a>
+      </span>
+    </div>
+  </footer>
 
   <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script> 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
