--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           <h2>Internet Fibra Óptica</h2>
           <p>Velocidade e qualidade! Internet com alta qualidade, Entregamos qualidade, segurança e confiança em nossos serviços.</p>
           <button class="my-button">
-            <a href="www.google.com" target="_blank">
+            <a href="https://api.whatsapp.com/send?phone=554930602020" target="_blank">
               <i class="fab fa-whatsapp"></i>
               <b>Consultar</b>
             </a>
@@ -149,7 +149,7 @@
           <h2>Telefone Fixo Ilimitado!</h2>
           <p>Fale Ilimitado! Faça sua portabilidade! e Venha fazer parte da Melhor conexão da Região em Telefone Fixo, Trabalhamos com Telefone Fixo com planos a partir de R$30,00. </p>
           <button class="my-button">
-            <a href="www.google.com" target="_blank">
+            <a href="https://api.whatsapp.com/send?phone=554930602020" target="_blank">
               <i class="fab fa-whatsapp"></i>
               <b>Consultar</b>
             </a>
@@ -161,7 +161,7 @@
           <h2>Internet Rural Via Rádio</h2>
           <p>Você sempre conectado! Contamos com Internet via rádio em nossos interiores, em lugares de difícil acesso levamos Internet com qualidade e rapidez.</p>
           <button class="my-button">
-            <a href="www.google.com" target="_blank">
+            <a href="https://api.whatsapp.com/send?phone=554930602020" target="_blank">
               <i class="fab fa-whatsapp"></i>
               <b>Consultar</b>
             </a>
