--- a/index.html
+++ b/index.html
@@ -171,6 +171,9 @@
     </section>
 
     <div class="logoWhats">
+      <a href="tel:+4930602020">
+        <dotlottie-player src="https://lottie.host/cd967157-c90d-4a8b-b30d-1e28573df6a0/T4MvMTK2uj.json" background="transparent" speed="1" style="width: 100px; height: auto;" loop autoplay></dotlottie-player>
+      </a>
       <a href="https://api.whatsapp.com/send?phone=554930602020" target="_blank">
         <dotlottie-player src="https://lottie.host/97d4764b-e3d6-4d98-b962-094e92936313/xElMySWItp.json" background="transparent" speed="1" style="width: 100px; height: auto;" loop autoplay></dotlottie-player>
       </a>
